# projecttoolkit

./: CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  TODO.md  configure.ac
CMakeModule/: cmake_uninstall.cmake.in
data/: CMakeLists.txt  Makefile.am
data/template/: autotools.json  common.json  gtk.json
data/template/autotools/: configure.ac
data/template/common/: CHANGELOG.md  README.md  TODO.md
data/template/common/doc/: CONTRIBUTOR.md
data/template/common/doc/wiki/: contributing.md
data/template/gtk/: Makefile.am
data/template/gtk/pixmaps/: Makefile.am
data/template/gtk/pixmaps/128x128/: Makefile.am
data/template/gtk/pixmaps/16x16/: Makefile.am
data/template/gtk/pixmaps/24x24/: Makefile.am
data/template/gtk/pixmaps/32x32/: Makefile.am
data/template/gtk/pixmaps/48x48/: Makefile.am
data/template/gtk/pixmaps/64x64/: Makefile.am
doc/wiki/: creating-project.md  template-system.md
python/: CMakeLists.txt  Makefile.am  setup.py.in
python/projecttoolkit/: Makefile.am  filecreator.py
python/projecttoolkit/template/: Makefile.am  specparser.py
src/: CMakeLists.txt  Makefile.am  project-new.py.in  project.py.in
